--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header class="menu-principal">
         <div class="header-1">
             <div class="logo">
-                <img src="./img/logo.png" />
+                <img src="img/logo.png" />
             </div>
             <div class="redes-sociais">
                 <il>
@@ -119,34 +119,76 @@
     </main>
 
     <!-- PARTE DA GRID DO SITE -->
-    <h3>Nossos Projetos</h3>
+    <h3>PROJETOS</h3>
     <p>Aqui abaixo estão os trabalhos desenvolvidos nos estúdio desde 2014.</p>
     </div>
     </div>
-    <div class="column">
-        <div class="content">
-            <img src="img/img1.png" alt="img1" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat
-                nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+    <!--INICIO DA LINHA-->
+    <div class="row">
+        <div class="column">
+            <div class="content">
+                <img src="img/img2.png" alt="img2" style="width:100%">
+                <h3>Be Together</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img2.png" alt="img2" style="width:100%">
+                <h3>Get Them Home</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img3.jpg" alt="img3" style="width:100%">
+                <h3>UniLabirinto</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img3.jpg" alt="img3" style="width:100%">
+                <h3>UniLabirinto</h3>
+                <p></p>
+            </div>
         </div>
     </div>
-    <div class="column">
-        <div class="content">
-            <img src="img/img2.png" alt="img2" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat
-                nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+    <!--FIM DA LINHA-->
+    <!--INICIO DA LINHA-->
+    <div class="row">
+        <div class="column">
+            <div class="content">
+                <img src="img/img2.png" alt="img2" style="width:100%">
+                <h3>Be Together</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img2.png" alt="img2" style="width:100%">
+                <h3>Get Them Home</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img3.jpg" alt="img3" style="width:100%">
+                <h3>UniLabirinto</h3>
+                <p></p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="img/img3.jpg" alt="img3" style="width:100%">
+                <h3>UniLabirinto</h3>
+                <p></p>
+            </div>
         </div>
     </div>
-    <div class="column">
-        <div class="content">
-            <img src="img/img3.jpg" alt="img3" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat
-                nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-        </div>
-    </div>
+    <!--FIM DA LINHA-->
+
+
     <!-- FIM DA GRID DO SITE UWU -->
 </body>
 
