--- a/index.html
+++ b/index.html
@@ -10,74 +10,6 @@
 </head>
 
 <body>
-    <style>
-        *
-
-        /* FAZER RESPONSIVO*/
-            {
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: #ffffff;
-            padding: 20px;
-            font-family: Arial;
-        }
-
-        /* Centro do portifa */
-        .main {
-            max-width: 1000px;
-            margin: auto;
-        }
-
-        h1 {
-            font-size: 50px;
-            word-break: break-all;
-        }
-
-        .row {
-            margin: 8px -16px;
-        }
-
-        /* Adicionando padding entre as colunas */
-        .row,
-        .row>.column {
-            padding: 8px;
-        }
-
-        /* Crie quatro colunas iguais que ficam próximas uma da outra */
-        .column {
-            float: left;
-            width: 25%;
-        }
-
-        /* Clear floats after rows */
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        /* Content */
-        .content {
-            background-color: white;
-            padding: 10px;
-        }
-
-        /* detalhar depois... */
-        @media screen and (max-width: 900px) {
-            .column {
-                width: 50%;
-            }
-        }
-
-        /* empilha as colunas sobre as outras*/
-        @media screen and (max-width: 600px) {
-            .column {
-                width: 100%;
-            }
-        }
-    </style>
     <header class="menu-principal">
         <div class="header-1">
             <div class="logo">
@@ -155,7 +87,7 @@
         </div>
     </div>
     <!--FIM DA LINHA-->
-    <!--INICIO DA LINHA-->
+    <!--INICIO DA LINHA 2-->
     <div class="row">
         <div class="column">
             <div class="content">
@@ -186,9 +118,7 @@
             </div>
         </div>
     </div>
-    <!--FIM DA LINHA-->
-
-
+    <!--FIM DA LINHA 2-->
     <!-- FIM DA GRID DO SITE UWU -->
 </body>
 
