--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
     <div class="row">
         <div class="column">
             <div class="content">
-                <img src="img/img2.png" alt="img2" style="width:100%">
+                <img src="img/img1.png" alt="img1" style="width:100%">
                 <h3>Be Together</h3>
-                <p></p>
+                <p>Be Together is a mobile puzzle game currently in development where you need to solve the riddles on
+                    each room by getting together with other characters and bringing them to a portal that matches their
+                    color.</p>
             </div>
         </div>
         <div class="column">
@@ -74,13 +76,14 @@
         <div class="column">
             <div class="content">
                 <img src="img/img3.jpg" alt="img3" style="width:100%">
-                <h3>UniLabirinto</h3>
-                <p></p>
+                <h3>Atomic Rocket Arena</h3>
+                <p>Originally released in 2015, the game was updated in 2017 with new arenas with different mechanics
+                    and improvements in art.</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <img src="img/img3.jpg" alt="img3" style="width:100%">
+                <img src="img/img4.png" alt="img4" style="width:100%">
                 <h3>UniLabirinto</h3>
                 <p></p>
             </div>
@@ -91,14 +94,14 @@
     <div class="row">
         <div class="column">
             <div class="content">
-                <img src="img/img2.png" alt="img2" style="width:100%">
+                <img src="img/img5.png" alt="img5" style="width:100%">
                 <h3>Be Together</h3>
                 <p></p>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <img src="img/img2.png" alt="img2" style="width:100%">
+                <img src="img/img5.png" alt="img5" style="width:100%">
                 <h3>Get Them Home</h3>
                 <p></p>
             </div>
