--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
             <div class="content">
                 <img src="img/img2.png" alt="img2" style="width:100%">
                 <h3>Get Them Home</h3>
-                <p></p>
+                <p>A Global Game Jam Game</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
                 <img src="img/img3.jpg" alt="img3" style="width:100%">
-                <h3>Atomic Rocket Arena</h3>
-                <p>Originally released in 2015, the game was updated in 2017 with new arenas with different mechanics
-                    and improvements in art.</p>
+                <h3>Unilabirinto</h3>
+                <p>Experimental code</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
                 <img src="img/img4.png" alt="img4" style="width:100%">
-                <h3>UniLabirinto</h3>
-                <p></p>
+                <h3>Atomic Rocket Arena</h3>
+                <p>Originally released in 2015, the game was updated in 2017 with new arenas with different mechanics
+                    and improvements in art.</p>
             </div>
         </div>
     </div>
