--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="content">
                 <img src="img/img3.jpg" alt="img3" style="width:100%">
                 <h3>Unilabirinto</h3>
-                <p>Experimental code</p>
+                <p>Experimental Game to Unisinos Lab</p>
             </div>
         </div>
         <div class="column">
@@ -95,29 +95,34 @@
         <div class="column">
             <div class="content">
                 <img src="img/img5.png" alt="img5" style="width:100%">
-                <h3>Be Together</h3>
-                <p></p>
+                <h3>Sete Povos</h3>
+                <p>Sete Povos permite que você viva o cotidiano de uma redução jesuíticas no século XVIII no sul do
+                    Brasil. Divirta-se jogando diferentes mini-games de ação, cada um deles é uma tarefa para gerenciar
+                    a redução.</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <img src="img/img5.png" alt="img5" style="width:100%">
-                <h3>Get Them Home</h3>
-                <p></p>
+                <img src="img/img6.png" alt="img6" style="width:100%">
+                <h3>X-Diseased</h3>
+                <p>Analogic game developed to Biochemistry's area courses at UNISINOS University.</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <img src="img/img3.jpg" alt="img3" style="width:100%">
-                <h3>UniLabirinto</h3>
-                <p></p>
+                <img src="img/img7.png" alt="img7" style="width:100%">
+                <h3>Funda Simulator</h3>
+                <p>Funda Simulator is an arcade VR game where the player can remember the sweet sensation of shooting
+                    with a slingshoot without being repressed for destroying everything.</p>
             </div>
         </div>
         <div class="column">
             <div class="content">
-                <img src="img/img3.jpg" alt="img3" style="width:100%">
-                <h3>UniLabirinto</h3>
-                <p></p>
+                <img src="img/img8.png" alt="img8" style="width:100%">
+                <h3>Sinergia Game</h3>
+                <p>O SINERGIA GAME é um jogo desenvolvido pelo estúdio experimental de desenvolvimento de jogos da
+                    UNISINOS/RS, o Atomic Rocket Entertainment, para a II Mostra Sinergia que ocorre em 06 de Novembro
+                    de 2019</p>
             </div>
         </div>
     </div>
