--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             </div>
             <div class="redes-sociais">
                 <il>
-                    <a href="">
+                    <a href="https://twitter.com/atomicrocketent">
                         <img src="img/logoTwitter.Amarelo.png" />
                     </a>
                 </il>
                 <il>
-                    <a href="">
+                    <a href="https://www.instagram.com/atomicrocketent/">
                         <img src="img/logoInsta.Amarelo.png" />
                     </a>
                 </il>
                 <il>
-                    <a href="">
+                    <a href="https://www.facebook.com/AtomicRocketGames/">
                         <img src="img/logoFacebook.Amarelo.png" />
                     </a>
                 </il>
